--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,155 @@
-/* ini css */
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background: #ECEEF0 fixed no-repeat;
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    padding: 20px;
+    background-color: #3E53AD;
+}
+
+.main {
+    flex: 1;
+    padding: 20px;
+}
+.nav-button {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-button button {
+    background-color: #788be3;
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.nav-button button:hover {
+    background-color: darkblue;
+    color: white;
+}
+
+.nav-button button.active {
+    background-color: darkblue;
+    color: white;
+}
+
+.calculator {
+    display: flex;
+    justify-content: space-around;
+    color: black;
+    padding: 20px;
+}
+
+.hidden {
+    display: none;
+}
+
+.hitungLuasKel {
+    background-color: white;
+    color: white;
+    border: 2px solid navy;
+    border-radius: 10px;
+    width: -webkit-fill-available;
+    margin: 10px;
+}
+
+.hitungLuasKel>h2 {
+    margin: 0;
+    padding: 20px;
+    color: white;
+    background-color: #3E53AD;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.gambarPersegi {
+    background-image: url(/assets/square.png);
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 150px;
+    margin-top: 15px;
+    background-size: cover;
+    justify-self: center;
+}
+
+.keterangan {
+    color: black;
+    text-align: left;
+    padding: 10px;
+    border-bottom: 2px solid black;
+}
+
+.perhitungan {
+    color: black;
+    padding: 10px;
+}
+
+.perhitungan>input {
+    border-radius: 5px;
+    height: 30px;
+    width: -webkit-fill-available;
+    margin-bottom: 10px;
+    border-color: #CCD4DE;
+}
+
+.perhitungan>p {
+    text-align: left;
+}
+
+.gambarPersegiPanjang {
+    background-image: url(/assets/frame.png);
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 150px;
+    margin-top: 15px;
+    background-size: cover;
+    justify-self: center;
+}
+
+.hitung {
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+.reset {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.hitung:hover {
+    background-color: black;
+}
+
+.reset:hover{
+    background-color: black;
+}
+
+footer {
+    padding: 10px;
+    background-color: #1E2A38;
+    color: white;
+    text-align: center;
+}
