--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Body */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -11,21 +12,26 @@ body {
     min-height: 100vh;
 }
 
+/* Header */
 header {
     padding: 20px;
     background-color: #3E53AD;
 }
 
+/* Main */
 .main {
     flex: 1;
     padding: 20px;
 }
+
+/* Navigasi */
 .nav-button {
     margin: 20px;
     display: flex;
     flex-direction: column;
 }
 
+/* Tombol-Navigasi */
 .nav-button button {
     background-color: #788be3;
     color: black;
@@ -47,18 +53,21 @@ header {
     color: white;
 }
 
+/* Kalkulator */
 .calculator {
     display: flex;
     justify-content: space-around;
     color: black;
     padding: 20px;
+    flex-direction: row;
 }
 
 .hidden {
     display: none;
 }
 
-.hitungLuasKel {
+/* Section-Persegi dan Persegi Panjang */
+.hitungluaskel {
     background-color: white;
     color: white;
     border: 2px solid navy;
@@ -67,7 +76,7 @@ header {
     margin: 10px;
 }
 
-.hitungLuasKel>h2 {
+.hitungluaskel>h2 {
     margin: 0;
     padding: 20px;
     color: white;
@@ -76,7 +85,7 @@ header {
     border-top-left-radius: 10px;
 }
 
-.gambarPersegi {
+.gambarpersegi {
     background-image: url(/assets/square.png);
     background-repeat: no-repeat;
     width: 150px;
@@ -110,7 +119,7 @@ header {
     text-align: left;
 }
 
-.gambarPersegiPanjang {
+.gambarpersegipanjang {
     background-image: url(/assets/frame.png);
     background-repeat: no-repeat;
     width: 150px;
@@ -120,6 +129,7 @@ header {
     justify-self: center;
 }
 
+/* Tombol Hitung */
 .hitung {
     background-color: blue;
     color: white;
@@ -129,6 +139,8 @@ header {
     cursor: pointer;
     margin-top: 10px;
 }
+
+/* Tombol Reset */
 .reset {
     background-color: red;
     color: white;
@@ -147,9 +159,17 @@ header {
     background-color: black;
 }
 
+/* Footer */
 footer {
     padding: 10px;
     background-color: #1E2A38;
     color: white;
     text-align: center;
+}
+
+/* Responsive Screen */
+@media only screen and (max-width:600px){
+    .calculator {
+        flex-direction: column;
+    }
 }
