--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header {
 }
 
 .gambarpersegi {
-    background-image: url(/assets/square.png);
+    background-image: url('../assets/square.png');
     background-repeat: no-repeat;
     width: 150px;
     height: 150px;
@@ -120,7 +120,7 @@ header {
 }
 
 .gambarpersegipanjang {
-    background-image: url(/assets/frame.png);
+    background-image: url('../assets/frame.png');
     background-repeat: no-repeat;
     width: 150px;
     height: 150px;
