--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ header {
     border-radius: 10px;
     width: -webkit-fill-available;
     margin: 10px;
+    text-align: center;
 }
 
 .hitungluaskel>h2 {
